remove api key from github

--- a/radmuc/notebooks/translate_english.ipynb
+++ b/radmuc/notebooks/translate_english.ipynb
@@ -103,7 +103,11 @@
    "outputs": [],
    "source": [
     "import openai\n",
-    "openai.api_key = \"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\"\n"
+    "openai.api_key = \"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\"\n",
+    "\n",
+    "with open(\"api_key.txt\", \"r\") as f:\n",
+    "    #read api key from file and remove \\n at the end\n",
+    "    api_key = f.read().replace('\\n', '')\n"
    ]
   },
   {
